@@ -50,6 +50,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Friendlier check for PHP 5 in command-line scripts; it's common for parallel
   PHP 4 and 5 installations to interfere on the command-line.
 * Fix regression in autoconfirm permission check
+* (bug 3015) Add CSS ids to subcategory and page sections on category pages
 
 
 == Languages updated ==
